# tax-certificate-generator

./: .gitignore  pyproject.toml  slips_to_excel.py
